@@ -107,11 +107,9 @@ MACRO_INSTRUCTIONS =
      "bbgteq",
      "bblt",
      "bblteq",
-     "btio",
      "btis",
      "btiz",
      "btinz",
-     "btbo",
      "btbs",
      "btbz",
      "btbnz",
@@ -155,15 +153,12 @@ MACRO_INSTRUCTIONS =
      "cigteq",
      "cilt",
      "cilteq",
-     "tio",
      "tis",
      "tiz",
      "tinz",
-     "tbo",
      "tbs",
      "tbz",
      "tbnz",
-     "tpo",
      "tps",
      "tpz",
      "tpnz",
@@ -197,7 +192,6 @@ MACRO_INSTRUCTIONS =
      "cplt",
      "cplteq",
      "storep",
-     "btpo",
      "btps",
      "btpz",
      "btpnz",
