@@ -1,3 +1,14 @@
+2012-09-10  Filip Pizlo  <fpizlo@apple.com>
+
+        offlineasm has some impossible to implement, and unused, instructions
+        https://bugs.webkit.org/show_bug.cgi?id=96310
+
+        Reviewed by Mark Hahnenberg.
+
+        * offlineasm/armv7.rb:
+        * offlineasm/instructions.rb:
+        * offlineasm/x86.rb:
+
 2012-09-09  Geoffrey Garen  <ggaren@apple.com>
 
         Refactored op_tear_off* to support activations that don't allocate space for 'arguments'
